# Travel-agent-crew-ai

./: README.md  agents.YAML  main.py
.devcontainer/: devcontainer.json
travel_agent/: README.md  main.py  pyproject.toml
travel_agent/src/travel_agent/: main.py
travel_agent/src/travel_agent/config/: trip_agents.py
travel_agent/travel_agent/config/: trip_agents.py
