[project]
name = "travel_agent"
version = "0.1.0"
description = "travel-agent using crewAI"
authors = [{ name = "Adriana", email = "adrianapiccolo00@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
travel_agent = "travel_agent.main:run"
run_crew = "travel_agent.main:run"
train = "travel_agent.main:train"
replay = "travel_agent.main:replay"
test = "travel_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
